Add .env.example and update configurations for RDS MySQL support

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@
 changelog/schema-dump.xml
 changelog/diff.xml
 
-# Local overrides
+# Local overrides and secrets (RDS URLs and credentials)
 liquibase.properties.local
+.env
