--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "dev": "node --watch index.js"
   },
   "dependencies": {
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "swagger-ui-express": "^5.0.0"
   },
   "engines": {
     "node": ">=18"
