--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "dev": "node --watch index.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.995.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mysql2": "^3.11.0",
